--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "feedback-app-trial",
+  "name": "@viniciusoliveiras/feedback-app-trial",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/viniciusoliveiras"
+  },
   "version": "1.0.0",
   "description": "Made with create-react-library",
   "author": "viniciusoliveiras",
   "license": "MIT",
-  "repository": "viniciusoliveiras/feedback-app-trial",
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.tsx",
